--- a/choosing-instruments.html
+++ b/choosing-instruments.html
@@ -21,7 +21,7 @@
     <h1>Choosing an Instrument</h1>
     <p class="need-help">If you need help choosing an instrument send us an email</p>
     <p>Playing a concert can be great fun! Or can be totally scary! Sometimes both at the same time</p>
-    <p>So we've put together a list of top tips or great concerts</p>
+    <p>So we've put together a list of top tips or great concerts!!!!!!!!!!</p>
     <h2>Copy out a set-list</h2>
     <p>A <strong>set-list</strong>is a list of all your songs and the order you will play them</p>
     <p>Make copies for everyone!</p>
